[gd_scene load_steps=17 format=2]

[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/morte/3.png" type="Texture" id=1]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/morte/2.png" type="Texture" id=2]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/morte/1.png" type="Texture" id=3]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/cima/sprite_2.png" type="Texture" id=4]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/lado/sprite_0.png" type="Texture" id=5]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/lado/sprite_1.png" type="Texture" id=6]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/lado/sprite_2.png" type="Texture" id=7]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/susto.png" type="Texture" id=8]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/morte/0.png" type="Texture" id=9]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/cima/sprite_0.png" type="Texture" id=10]
[ext_resource path="res://Duck Hunt/Assets/Material Duck Hunt/passaro/cima/sprite_1.png" type="Texture" id=11]
[ext_resource path="res://Duck Hunt/Personatges/Duck2.gd" type="Script" id=12]
[ext_resource path="res://Duck Hunt/Ã nec.wav" type="AudioStream" id=13]
[ext_resource path="res://Duck Hunt/caient.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Mort",
"speed": 7.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "Vol horitzontal",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Impacte",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 11 ) ],
"loop": true,
"name": "Vol amunt",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 49.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
input_pickable = true
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -3 )
frames = SubResource( 1 )
animation = "Vol horitzontal"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="moviment" type="Timer" parent="."]

[node name="Mort" type="Timer" parent="."]

[node name="Mort2" type="Timer" parent="."]
wait_time = 4.0

[node name="Escapa" type="Timer" parent="."]
wait_time = 20.0

[node name="Anima" type="Timer" parent="."]
wait_time = 6.0

[node name="Anec1SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -20.0

[node name="Anec2SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.0

[connection signal="mouse_entered" from="." to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_KinematicBody2D_mouse_exited"]
[connection signal="timeout" from="moviment" to="." method="_on_moviment_timeout"]
[connection signal="timeout" from="Mort" to="." method="_on_Mort_timeout"]
[connection signal="timeout" from="Mort2" to="." method="_on_Mort2_timeout"]
[connection signal="timeout" from="Anima" to="." method="_on_Anima_timeout"]
